2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/muxers/asf/Makefile.am:
	* flumotion/component/muxers/asf/asf.xml:
	* flumotion/component/muxers/asf/wizard_gtk.py (added):
	Add a check for the fluasfmuxer so it can be used from the conversion
	Step (See pub:r8454)

2010-01-21  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/muxers/asf/asf.xml:
	Change asf muxer description in wizard
	Closes #6853

2009-12-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* env.in:
	Add flumotion's bin directory to the path so we can call flumotion from
	subprojects.
	* flumotion/component/muxers/asf/asf.py:
	Fix pep8 error: remove trailing backspaces.
	* flumotion/component/encoders/wma/wma.xml:
	* flumotion/component/encoders/wmv/wmv.xml:
	* flumotion/component/muxers/asf/asf.xml:
	* flumotion/component/producers/wms/wms.xml:
	Fix and add missing _description attributes

2009-12-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion-windowsmedia.spec.in:
	@RELEASE@ no longer gets substituted, use @PACKAGE_VERSION_RELEASE@.
	See r23428.

2009-12-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/encoders/wma/wma.py:
	Only use legacyresample if the element is availalble. In older
	GStreamer versions audioresample was the element that worked correctly
	and was then renamed to legacyresample.

2009-11-24  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Sebastien Merle 

	* flumotion/component/encoders/wma/wma.py:
	* flumotion/component/encoders/wma/wma.xml:
	Added 'samplerate' property to wma-encoder element
	Closes #5852

2009-10-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* configure.ac:
	Adapt to changes from pub:r8195.

2009-08-25  Josep Joan Ribas  <jribas@flumotion.com>

	* configure.ac:
	Back to dev

=== release 0.5.1 ===

2009-08-25  Josep Joan Ribas  <jribas@flumotion.com>

	* configure.ac:
	Releasing 0.5.1

2009-06-18  Sebastien Merle  <sebastien@fluendo.com>
