@@ -1,3 +1,13 @@
+2010-03-04  Sébastien Merle  <sebastien@flumotion.com>
+
+	reviewed by: Jan Urbanski
+
+	* flumotion/component/producers/wms/asfparse.py:
+	* flumotion/component/producers/wms/wms.py:
+	* flumotion/component/producers/wms/wms.xml:
+	Do not save error dumps by default.
+	Added a component property to enable it.
+
 2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	* flumotion/component/muxers/asf/Makefile.am:
